...
  static const String langEnglish = 'en-IN';

  // Target Labels display mapping
  static const Map<String, Map<String, String>> targetDisplayNames = {
    'blast': {
      'en': 'Paddy Blast',
      'mr': 'भातावरील करपा',
      'hi': 'धान का झुलसा रोग',
    },
    'brown_spot': {
      'en': 'Brown Spot',
      'mr': 'तपकिरी ठिपके',
      'hi': 'भूरा धब्बा रोग',
...
